package Sesi13.StudiKasus.Interfaces;

public interface Tunjangan {
    double hitungTunjangan();
}